# conveyors-system-des-library

./: .gitignore  README.md  Sim.py  Utilities.py  data.csv  data_analisis.xlsx  devs_models.md  i4tech-graph.ipynb  logs.xlsx  pyproject.toml  requirements.txt  rl_training.py  tests.ipynb  tests.py
RL/: environment_creation.py
data/: CB6AE410  devs_models.md  simulator_config.xls  simulator_config.xlsx  simulator_config_v1.xls  simulator_config_v2.xlsx  simulator_config_v3.xlsx
desim/: config_parser.py  core.py  custom_logging.py  external_function.py  logger.py  utils.py
desim/objects/: container.py  system.py
desym/: config_parser.py  core.py  events_manager.py  external_function.py  test_utils.py  timed_events_manager.py
desym/controllers/: behavior_controller.py  behaviour_controller.py  results_controller.py
desym/helpers/: config_parser.py  test_utils.py  timed_events_manager.py
desym/objects/: __init__.py  container.py  item.py  system.py  tray.py
docs/: Sim2.ai  SimulationConfigGenerator.xlsx  py.uml  py2.uml
graph/: graph-i4tech.html
legacy/: Core01_01.py  Core01_02.py  Core01_03.py  Core02_01.py  Core02_02.py  Core02_03.py  Graficos.py  NN01.py  Pruebas.py  RedNeuronal.py  Sim.py
others/: Core01_01.py  Core01_02.py  Core01_03.py  Core02_01.py  Core02_02.py  Core02_03.py  RedNeuronal.py
sim/: __init__.py  behavior-rl.py  behavior.py  behavior_functions.py  checking.py  controller.py  core.py  custom_logging.py  data_storage.py  environment.py  environment_creation.py  environment_wrappers.py  factory.py  graph.py  item.py  logger.py  main.py  main_multi.py  mqtt.py  reinforced_learning.ipynb  reinforced_learning.py  results_controller.py  rl_training.py  settings.py  wandb_wrapper.py
sim/controllers/: __init__.py  behavior_controller.py  behaviour_controller.py  results_controller.py
sim/helpers/: config_parser.py  test_utils.py  timed_events_manager.py
sim/objects/: __init__.py  item.py  stopper.py  system.py  tray.py
simulations/: base_case.py  controller_empty.py  controller_example.py
simulations/base_case/: behaviour.py  devs.md  results.py  simulation.py  simulator_config.xlsx
simulator/: __init__.py  api.py  behaviour_controller.py  config_parser.py  controller.py  core.py  data.py  events_manager.py  legacy.py  output.py  product.py  results_controller.py  stopper.py  test_utils.py  timed_events_manager.py  tray.py
simulator/helpers/: config_parser.py
simulator/objects/: product.py  stopper.py
src/examples/: controller_empty.py  controller_example.py  simulation_example.py
src/simulations/: base_case.py  controller_empty.py  controller_example.py
src/simulator/: __init__.py  behaviour_controller.py  core.py  results_controller.py
tensorboard_logs/PPO_1/: events.out.tfevents.1711530241.AngelWorkstation.15982.0
tensorboard_logs/PPO_v1_1/: events.out.tfevents.1711530287.AngelWorkstation.16068.0
tests/: tests.ipynb
tests/sim/: behavior.py  behaviour.py  checking.py  config.xlsx  data_storage.py  graph.py  main.py  (+4 more)
(+66 files in other folders)
