[tool.poetry]
name = "logistics-conveyors-des-library"
version = "0.1.0"
description = ""
authors = ["Angel Fernandez Sobrino <fernandezsobrinoangel@gmail.com>"]
readme = "README.md"
packages = [{include = "sim"}]

[tool.poetry.dependencies]
python = ">=3.11.1"
openpyxl = "^3.1.0"
wandb = "^0.13.10"
paho-mqtt = "^1.6.1"
types-paho-mqtt = "^1.6.0.6"
types-openpyxl = "^3.1.0.23"
stable-baselines3 = "^2.2.1"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"
black = { version = "^23.1a1", allow-prereleases = true }
pre-commit = "^2.21.0"
genbadge = { extras = ["all"], version = "^1.1.0" }
poethepoet = "^0.18.1"
ipykernel = "^6.29.0"
line-profiler = "^4.1.2"

[tool.poe.tasks]
tests = "poetry run pytest"
tests-cov = "poetry run pytest --cov=sim --cov-report=term"
lint = "poetry run black ./sim/* ./tests/*"
types = "poetry run mypy ./desym ./tests"
sim = "poetry run python -OO sim/main.py"
simv = "poetry run python sim/main.py --verbose"
rl = "poetry run python rl_training.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
